tb-manifests/namespaces/tb-mgmt/eagle_console.yaml
# Copyright 2021 The Tranquility Base Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: v1
kind: Service
metadata:
  name: eagleconsole
  labels:
    app: eagleconsole
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
  selector:
    app: eagleconsole

---
apiVersion: v1
kind: Service
metadata:
  name: houstonservice
  labels:
    app: houstonservice
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: http
    - port: 443
      targetPort: 3000
      name: https
  selector:
    app: houstonservice
---
apiVersion: v1
kind: Service
metadata:
  name: gcpdac
spec:
  ports:
    - port: 80
      targetPort: 3100
      name: http
    - port: 443
      targetPort: 3100
      name: https
  selector:
    app: gcpdac
---
apiVersion: v1
kind: Service
metadata:
  name: mysql57
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql57
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eagleconsole-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eagleconsole
  template:
    metadata:
      labels:
        app: eagleconsole
        version: v1
    spec:
      containers:
        - name: eagleconsole
          image: gcr.io/tranquility-base-images/tb-eagle-console:v0.15.0
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: houstonservice-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: houstonservice
  template:
    metadata:
      labels:
        app: houstonservice
        version: v1
    spec:
      containers:
        - name: houstonservice
          image: gcr.io/tranquility-base-images/tb-houston-service:v0.49.2
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        version: v1
    spec:
      volumes:
        - name: redis-pv-storage
          persistentVolumeClaim:
            claimName: redis-pv-claim
      containers:
        - name: redis
          image: redis:alpine
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: redis-pv-storage
              mountPath: "/data/redis"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcpdac-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcpdac
  template:
    metadata:
      labels:
        app: gcpdac
        version: v1
    spec:
      containers:
        - name: gcpdac
          image: gcr.io/tranquility-base-images/tb-gcp-dac:v0.2.0
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: Always
          command: ['/bin/sh', './src/main/bash/tranquilitybase/gcpdac/main/app_docker.sh']
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: config-volume
              mountPath: /app/resources/ec-config.yaml
              subPath: ec-config.yaml
            - name: google-cloud-key
              mountPath: /var/secrets/google
        - name: gcpdacworker
          image: gcr.io/tranquility-base-images/tb-gcp-dac:v0.2.0
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: Always
          command: ['/bin/sh', './src/main/bash/tranquilitybase/gcpdac/celery_worker/celery_worker.sh']
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /app/resources/ec-config.yaml
              subPath: ec-config.yaml
            - name: google-cloud-key
              mountPath: /var/secrets/google
      volumes:
        - name: config-volume
          configMap:
            name: ec-config
        - name: google-cloud-key
          secret:
            secretName: ec-service-account
---
apiVersion: apps/v1  # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql57
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql57
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql57
    spec:
      volumes:
        - name: mysql-pv-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
      containers:
        - name: mysql57
          image: gcr.io/tranquility-base-images/tb-db:v0.1.1
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql57
              containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-pv-storage
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: private-ingressgateway  # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ec-tls-credential
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: houstonservice
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: houstonservice.ssp.svc.cluster.local
            port:
              number: 80
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - PATCH
          - DELETE
        allowHeaders:
          - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gcpdac
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - match:
        - uri:
            prefix: /dac
      route:
        - destination:
            host: gcpdac.ssp.svc.cluster.local
            port:
              number: 80
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - PATCH
          - DELETE
        allowHeaders:
          - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eagleconsole
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            host: eagleconsole.ssp.svc.cluster.local
            port:
              number: 443

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            host: redis.ssp.svc.cluster.local
            port:
              number: 6379

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: eagleconsole
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: eagleconsole.ssp.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: houstonservice
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: houstonservice.ssp.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gcpdac
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: gcpdac.ssp.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: redis
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: redis.ssp.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
